# Chat

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: MessageHandler.h  Network.h  NetworkClient.h  UserStatus.h  console_interface.h  interaction_chat.h  interactive_interface.h
client/src/: MessageHandler.cpp  Network.cpp  NetworkClient.cpp  NetworkClientLinux.cpp  NetworkClientWin.cpp  UserStatus.cpp  console_interface.cpp  interaction_chat.cpp  main.cpp
common/: CMakeLists.txt  DOC_COMMON.md
common/include/: Message.h  Network.h  Protocol.h  User.h
common/src/: Message.cpp  Protocol.cpp  User.cpp
server/: CMakeLists.txt
server/include/: BD.h  BD_File.h  BD_MySQL.h  Core.h  MessageHandler.h  Network.h  NetworkServer.h  dataUserOnline.h  hashPass.h  log.h
server/src/: BD.cpp  BD_File.cpp  Core.cpp  DB_MySQL.cpp  MessageHandler.cpp  MessageSrv.cpp  Network.cpp  NetworkServer.cpp  log.cpp  main.cpp
